# voxels

./: Cargo.toml  README.md
assets/shaders/: vox.wgsl
src/: bevy_voxel.rs  command.rs  generate_mesh.rs  lib.rs  main.rs  shape.rs  voxel.rs
