[package]
name = "voxel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.11.0"
bevy_panorbit_camera = "0.7.0"
bevy_editor_pls = { git = "https://github.com/jakobhellermann/bevy_editor_pls.git" }
wgpu = "0.17.0"
bytemuck = "1.13.1"
bevy_screen_diagnostics = "0.3.0"

[profile.dev.package."*"]
opt-level = 3
